Fixed Pagetools are behind the scrollbar on IE11 (thanks to @blacklord049 on #174 issue)

--- a/css/template.less
+++ b/css/template.less
@@ -6,6 +6,10 @@
  * License  GPL 2 (http://www.gnu.org/licenses/gpl.html)
  */
 
+ html {
+  -ms-overflow-style: scrollbar;
+ }
+
 body {
 
   &.default,
